--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ src/rarefold/data/__pycache__/
 src/rarefold/data/tools/__pycache__/
 src/net/src/net/alphafold/model/__pycache__/
 src/rarefold/model/tf/__pycache__/
+src/rarefold/model/__pycache__
